RESOLVED FIXED303968
REGRESSION (iPadOS 26): Closing the sidebar or resizing the window unnecessarily zooms the page
https://bugs.webkit.org/show_bug.cgi?id=303968
Summary REGRESSION (iPadOS 26): Closing the sidebar or resizing the window unnecessar...
Wenson Hsieh
Reported 2025-12-10 19:54:56 PST
Attachments
Wenson Hsieh
Comment 1 2025-12-10 20:10:01 PST
EWS
Comment 2 2025-12-10 22:42:22 PST
Committed 304277@main (049bb0acc54f): <https://commits.webkit.org/304277@main> Reviewed commits have been landed. Closing PR #55223 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.